--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -8,24 +8,29 @@
 
     <TextView
         android:id="@+id/text_view_about"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="16dp"
         android:text="@string/adout"
         android:textColor="@color/textbody"
-        android:padding="16dp"
-        android:textSize="20sp"
-        android:gravity="center"
-        />
+        android:textSize="20sp" />
 
     <TextView
-        android:padding="5dp"
         android:id="@+id/text_view_LinkDonations"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:gravity="center"
+        android:padding="5dp"
         android:text="@string/LinkDonations"
         android:textSize="20sp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.891"
+        app:layout_constraintStart_toStartOf="parent" />
         />
 
 </android.support.constraint.ConstraintLayout>
