--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,19 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_menu_manage"
             android:title="Settings" />
         <item
             android:id="@+id/nav_iobroker"
+            android:icon="@drawable/ic_menu_share"
             android:title="ioBroker" />
         <item
             android:id="@+id/nav_smart_home"
+            android:icon="@drawable/ic_menu_send"
             android:title="SmartHome" />
         <item
             android:id="@+id/nav_about"
+            android:icon="@drawable/ic_menu_slideshow"
             android:title="About" />
     </group>
 
