--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,63 +2,24 @@
 
     <SwitchPreference
         android:defaultValue="false"
-        android:key="mqtt_switch"
-        android:summary="@string/mqtt_summary_switch"
-        android:title="@string/mqtt_title" />
+        android:key="general_startBoot"
+        android:summary="@string/general_summary_start_on"
+        android:title="@string/general_title_start_on" />
+
 
     <ListPreference
-        android:defaultValue="TLS"
-        android:entries="@array/mqtt_sec_list_titles"
-        android:entryValues="@array/mqtt_sec_list_values"
-        android:key="mqtt_list_sec"
+        android:defaultValue="0"
+        android:entries="@array/general_list_titles"
+        android:entryValues="@array/general_list_values"
+        android:key="general_list_timer"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null"
-        android:title="@string/mqtt_sec" />
+        android:title="@string/general_title_timer" />
 
-    <EditTextPreference
-        android:capitalize="words"
-        android:defaultValue="my.mqtt.com"
-        android:inputType="textCapWords"
-        android:key="mqtt_server"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="@string/mqtt_server" />
-    <EditTextPreference
-        android:capitalize="words"
-        android:defaultValue="1883"
-        android:inputType="textCapWords"
-        android:key="mqtt_port"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="@string/mqtt_port" />
-    <EditTextPreference
-        android:capitalize="words"
-        android:defaultValue="admin"
-        android:inputType="textCapWords"
-        android:key="mqtt_login"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="@string/mqtt_login" />
-    <EditTextPreference
-        android:capitalize="words"
-        android:defaultValue="pass"
-        android:inputType="textCapWords"
-        android:key="mqtt_pass"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="@string/mqtt_pass" />
-
-    <EditTextPreference
-        android:capitalize="words"
-        android:inputType="textCapWords"
-        android:key="mqtt_device"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="@string/mqtt_device" />
+    <!--<SwitchPreference-->
+        <!--android:defaultValue="false"-->
+        <!--android:key="general_switch"-->
+        <!--android:summary="@string/mqtt_summary_switch"-->
+        <!--android:title="@string/mqtt_title" />-->
 
 </PreferenceScreen>
