--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -3,8 +3,13 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
+        android:fragment="ru.codedevice.claw.SettingsActivity$MqttPreferenceFragment"
+        android:icon="@drawable/ic_menu_mqtt"
+        android:title="@string/pref_header_mqtt"/>
+    <header
         android:fragment="ru.codedevice.claw.SettingsActivity$GeneralPreferenceFragment"
-        android:title="@string/pref_header_general" />
+        android:icon="@drawable/ic_menu_manage"
+        android:title="@string/pref_header_general"/>
 
     <header
         android:fragment="ru.codedevice.claw.SettingsActivity$NotificationPreferenceFragment"
