--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -16,21 +16,23 @@
         android:textColor="@color/textbody"
         android:textSize="20sp" />
 
-    <TextView
+    <ImageView
         android:id="@+id/text_view_LinkDonations"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
+        android:layout_width="129dp"
+        android:layout_height="97dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:gravity="center"
-        android:padding="5dp"
-        android:text="@string/LinkDonations"
-        android:textSize="20sp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.891"
-        app:layout_constraintStart_toStartOf="parent" />
-        />
+        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_about"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/paypal_button" />
+    />
 
 </android.support.constraint.ConstraintLayout>
