--- a/app/src/main/res/xml/app_widget_one_info.xml
+++ b/app/src/main/res/xml/app_widget_one_info.xml
@@ -7,6 +7,7 @@
     android:minWidth="40dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
+    android:configure="ru.codedevice.claw.ConfigWidget"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen|keyguard">
 
