--- a/app/src/main/res/layout/app_widget_text_and_title.xml
+++ b/app/src/main/res/layout/app_widget_text_and_title.xml
@@ -11,12 +11,12 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true">
     <ImageView
-        android:id="@+id/image_time"
+        android:id="@+id/image_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ImageView
-        android:id="@+id/image_date"
+        android:id="@+id/image_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
