--- a/app/src/main/res/xml/pref_mqtt.xml
+++ b/app/src/main/res/xml/pref_mqtt.xml
@@ -46,6 +46,15 @@
         android:singleLine="true"
         android:title="@string/mqtt_device" />
 
+    <EditTextPreference
+        android:capitalize="words"
+        android:inputType="textCapWords"
+        android:key="mqtt_first_topic"
+        android:maxLines="1"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="@string/mqtt_first_topic" />
+
 
 
 </PreferenceScreen>
